--- a/style.css
+++ b/style.css
@@ -4,16 +4,16 @@ body {
     color: #333;
     font-family: Lato, sans-serif;
 }
-.aaa {
+.show-area {
     width: 500px;
     margin: 0 auto;
     display: block;
     text-align: right;
 }
-.aaa img {
+.show-area img {
     width: 100%;
 }
-.aaa .more_inf {
+.show-area .more_inf {
     font-family: fantasy, cursive;
 }
 
@@ -24,7 +24,7 @@ body {
   }
 
 }
-.centered-main-page-element {
+.working-area {
     display: block;
     width: 500px;
     margin: 0 auto 0;
