--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Basic Style */
-body {
+.page {
     background-color: #f8f8f8;
     color: #333;
     font-family: Lato, sans-serif;
@@ -13,13 +13,13 @@ body {
 .show-area img {
     width: 100%;
 }
-.show-area .more_inf {
+.show-area .more-inf {
     font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
 
-  .aaa { 
+  .show-area { 
     text-align: center;
   }
 
@@ -37,17 +37,17 @@ body {
 .task-row-wrapper {
     display: flex;
 }
-ul {
+.list {
     margin:0;
     padding: 0px;
 }
-li, h3 {
+.item, .title {
     list-style:none;
 }
-input,button{
+.task,.btn{
     outline:none;
 }
-button {
+.btn {
     background: none;
     border: 0px;
     color: #888;
@@ -56,11 +56,11 @@ button {
     font-family: Lato, sans-serif;
     cursor: pointer;
 }
-button:hover {
+.btn:hover {
     color: #3a3A3a;
 }
 /* Heading */
-h3,
+.title,
 label[for='new-task'] {
     color: #333;
     font-weight: 700;
@@ -70,7 +70,7 @@ label[for='new-task'] {
     margin: 0;
     text-transform: uppercase;
 }
-input[type="text"] {
+.task[type="text"] {
     margin: 0;
     font-size: 18px;
     line-height: 18px;
@@ -82,7 +82,7 @@ input[type="text"] {
     font-family: Lato, sans-serif;
     color: #888;
 }
-input[type="text"]:focus {
+.task[type="text"]:focus {
     color: #333;
 }
 
@@ -91,12 +91,12 @@ label[for='new-task'] {
     display: block;
     margin: 0 0 20px;
 }
-input#new-task {
+.task#new-task {
     width: 318px;
 }
 
 /* Task list */
-li {
+.item {
     overflow: hidden;
     padding: 20px 0;
     border-bottom: 1px solid #eee;
@@ -105,47 +105,47 @@ li {
     justify-content: space-between;
     align-items: center;
 }
-li > * {
+.item > * {
     vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.item > .task[type="checkbox"] {
     margin: 0 10px;
 }
-li > label {
+.item > label {
     padding-left: 10px;
     box-sizing: border-box;
     font-size: 18px;
     width: 226px;
 }
-li >    input[type="text"] {
+.item >    .task[type="text"] {
     width: 226px
 }
-button.delete img {
+.btn.delete img {
     height: 2em;
     transform: rotateZ(45deg);
     transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+.btn.delete img:hover {
     transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+.list#completed-tasks label {
     text-decoration: line-through
     color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+.list .item .task[type=text] {
     display:none
 }
 
-ul li.edit-mode input[type=text] {
+.list .item .edit-mode .task[type=text] {
     display:inline-block;
     width:224px
 }
 
-ul li.edit-mode label {
+.list .item .edit-mode label {
     display:none;
 }
