--- a/style.css
+++ b/style.css
@@ -41,10 +41,12 @@
     margin: 0;
     padding: 0px;
 }
-.item, .title {
+.item,
+.title {
     list-style: none;
 }
-.task,.btn{
+.task,
+.btn {
     outline: none;
 }
 .btn {
@@ -118,15 +120,15 @@ label[for='new-task'] {
     font-size: 18px;
     width: 226px;
 }
-.item >    .task[type="text"] {
+.item > .task[type="text"] {
     width: 226px;
 }
-.btn.delete img {
+.btn .delete img {
     height: 2em;
     transform: rotateZ(45deg);
     transition: transform 200ms ease-in;
 }
-.btn.delete img:hover {
+.btn .delete img:hover {
     transform: rotateZ(0);
 }
 
