--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@
     display: inline-block;
     flex-grow: 1;
 }
-.task-row-wrapper {
+.add__wrapper {
     display: flex;
     padding-top: 20px;
 }
